rust/core/src/search/engine/snapshots/lucid_suggest_core__search__engine__tests__empty-0.snap
---
source: src/search/engine/mod.rs
expression: finder.hits
---
[
    Hit {
        id: 10,
        text: Text { "brown" "plush" "bear" },
        scores: Scores {
            matches: [],
            typos: 0,
            offset: 0,
            trans: 0,
            fin: true,
        },
    },
    Hit {
        id: 20,
        text: Text { "metal" "detector" },
        scores: Scores {
            matches: [],
            typos: 0,
            offset: 0,
            trans: 0,
            fin: true,
        },
    },
    Hit {
        id: 30,
        text: Text { "yellow" "metal" "mailbox" },
        scores: Scores {
            matches: [],
            typos: 0,
            offset: 0,
            trans: 0,
            fin: true,
        },
    },
]
