rust/core/src/search/engine/snapshots/lucid_suggest_core__search__engine__tests__equal-0.snap
---
source: src/search/engine/mod.rs
expression: finder.hits
---
[
    Hit {
        id: 30,
        text: Text { "yellow" "metal" "mailbox" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrrr] /1/ [qqqqq] },
                WordMatch { [rrrrr] /1/ [qqqqqq] },
                WordMatch { [rrrrrrr] /1/ [qqqqqqq] },
            ],
            linear: [
                3,
                -3,
                0,
                1,
                0,
            ],
        },
    },
    Hit {
        id: 20,
        text: Text { "metal" "detector" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrr] /1/ [qqqqqq] },
            ],
            linear: [
                1,
                -1,
                0,
                1,
                0,
            ],
        },
    },
]
