rust/core/src/search/engine/snapshots/lucid_suggest_core__search__engine__tests__intersection-0.snap
---
source: src/search/engine/mod.rs
expression: finder.hits
---
[
    Hit {
        id: 30,
        text: Text { "yellow" "metal" "mailbox" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrrrr] /0/ [qqqqqqq] },
            ],
            linear: [
                1,
                0,
                0,
                1,
                -2,
            ],
        },
    },
]
