rust/core/src/search/engine/snapshots/lucid_suggest_core__search__engine__tests__min_match-1.snap
---
source: src/search/engine/mod.rs
expression: finder.hits
---
[
    Hit {
        id: 30,
        text: Text { "yellow" "metal" "mailbox" },
        scores: Scores {
            matches: [
                WordMatch { [rrrr]rrr /0/ [qqqq].. },
            ],
            linear: [
                1,
                -3,
                0,
                0,
                -2,
            ],
        },
    },
]
