rust/core/src/search/engine/snapshots/lucid_suggest_core__search__engine__tests__partial-0.snap
---
source: src/search/engine/mod.rs
expression: finder.hits
---
[
    Hit {
        id: 10,
        text: Text { "brown" "plush" "bear" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrr] /0/ [qqqqq] },
                WordMatch { [rrrrr] /0/ [qqqqq] },
                WordMatch { [rrrr] /0/ [qqqq] },
            ],
            linear: [
                3,
                0,
                0,
                1,
                0,
            ],
        },
    },
]
