rust/core/src/search/engine/snapshots/lucid_suggest_core__search__engine__tests__partial-1.snap
---
source: src/search/engine/mod.rs
expression: finder.hits
---
[
    Hit {
        id: 20,
        text: Text { "metal" "detector" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrr] /0/ [qqqqq] },
                WordMatch { [rrrrrrrr] /0/ [qqqqqqqq] },
            ],
            typos: 0,
            offset: 0,
            trans: 0,
            fin: true,
        },
    },
    Hit {
        id: 30,
        text: Text { "yellow" "metal" "mailbox" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrr] /0/ [qqqqq] },
            ],
            typos: 0,
            offset: 1,
            trans: 0,
            fin: true,
        },
    },
]
