rust/core/src/search/engine/snapshots/lucid_suggest_core__search__engine__tests__partial-2.snap
---
source: src/search/engine/mod.rs
expression: finder.hits
---
[
    Hit {
        id: 30,
        text: Text { "yellow" "metal" "mailbox" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrrr] /0/ [qqqqqq] },
                WordMatch { [rrrrr] /0/ [qqqqq] },
                WordMatch { [rrrrrrr] /0/ [qqqqqqq] },
            ],
            linear: [
                3,
                0,
                0,
                1,
                0,
            ],
        },
    },
    Hit {
        id: 20,
        text: Text { "metal" "detector" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrr] /0/ [qqqqq] },
            ],
            linear: [
                1,
                0,
                0,
                1,
                0,
            ],
        },
    },
]
